1. dashboard updated 2. log viewer updated 3. interceptor updated 4. captcha validation 	modified:   src/app/interceptor/auth.interceptor.ts 	modified:   src/app/pages/apps/listregclient/listregclient.component.html 	modified:   src/app/pages/apps/log-viewer/log-viewer.component.html 	modified:   src/app/pages/apps/log-viewer/log-viewer.component.ts 	modified:   src/app/pages/authentication/boxed-login/boxed-login.component.html 	modified:   src/app/pages/authentication/boxed-login/boxed-login.component.ts 	modified:   src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.html 	modified:   src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.scss 	modified:   src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.ts

--- a/src/app/pages/apps/listregclient/listregclient.component.html
+++ b/src/app/pages/apps/listregclient/listregclient.component.html
@@ -22,9 +22,9 @@
           <tr *ngFor="let item of listOfRegClient; let i = index">
             <td>{{ i + 1 }}</td>
             <td>
-              <div style="display:flex">
+              <div style="display:flex;justify-content: center;">
     
-                <span>
+                <span style=" margin-right: 6px;">
       
                   {{ item.client_id }}
                 </span>
