--- a/src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.html
+++ b/src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.html
@@ -118,74 +118,31 @@
   
         <div>
 
-          <mat-card class="cardWithShadow " style="display: none" >
-            <mat-card-content class="p-24 ">
-              <mat-card-title>Registered client status</mat-card-title>
-              
-                      <!-- <mat-card class="b-1 shadow-none">
-                      
-                        <mat-card-content class="b-t-1" > -->
-                          <p> Registered Client: {{registationStatus.registered}}</p>
-                          
-                            <!-- <div class="row" style=" padding-bottom: 16px;">
-                                <div class="col-sm-7 col-lg-6">
-                                   Registered Client
-                                </div>
-                                <div class="col-sm-1 col-lg-1" style="display: flex;justify-content: center;">
-                                    :
-                                </div>
-                                <div class="col-sm-3 col-lg-3">
-                                  {{registationStatus.registered}}
-                                </div>
-                            </div> -->
-                          
-                
-                            <!-- <div class="row" style="margin-top: 16px;">
-                                <div class="col-sm-7 col-lg-7">
-                                    OTP used
-                                </div>
-                                <div class="col-sm-1 col-lg-1" style="display: flex;justify-content: center;">
-                                    :
-                                </div>
-                                <div class="col-sm-4 col-lg-4">
-                                  {{otpStatus?.otp_used}}
-                                </div>
-                            </div> -->
-            
-                
-                           
-                
-                
-                
-                        <!-- </mat-card-content>
-                    </mat-card> -->
-                
-              
-            </mat-card-content>
-           
-          </mat-card>
+      
           <!-- chart  -->
-          <mat-card class="cardWithShadow flex-fill" style="min-height: 199.6px;">
-            <mat-card-content class="p-24 ">
-              <mat-card-title>Date Range Alerts</mat-card-title> 
-            
-
+          <mat-card class="cardWithShadow flex-fill" style="min-height: 199.6px; display: flex; flex-direction: column; justify-content: space-between;">
+            <mat-card-title style="padding-left: 24px;padding-top: 24px;">Date Range Alerts</mat-card-title>
+          
+            <mat-card-content class="p-24" style="flex: 1; display: flex; flex-direction: column; justify-content: center;">
               <div *ngIf="clamav || integrity || urlV || usbv; else noChartData" id="visitor-chart" class="p-t-12 d-flex flex-column hideToolTip">
                 <apx-chart [series]="ourvisitorChart.series" [chart]="ourvisitorChart.chart" [labels]="ourvisitorChart.labels"
                   [colors]="ourvisitorChart.colors" [responsive]="ourvisitorChart.responsive"></apx-chart>
               </div>
-              
+          
               <ng-template #noChartData>
-                <p>No Data Available For The Chart</p> <!-- Custom message when conditions are not met -->
+                <div class="no-data-available">
+                  <i-tabler name="user" class="icon-20 d-flex larger-icon" style=" color: white; transform: scale(1.3); margin-right: 0.5rem;"></i-tabler>
+                  
+                  <ng-container *tablerIcons="'user'"></ng-container>
+                  
+                  <p>No Data Available For The Chart</p>
+                </div>
               </ng-template>
-              
-
-              
             </mat-card-content>
-           
-            <app-spinner [showSpinner]="isSpinnerVisible['dashDateRangeAlert']">
-            </app-spinner>
+          
+            <app-spinner [showSpinner]="isSpinnerVisible['dashDateRangeAlert']"></app-spinner>
           </mat-card>
+          
           
           
         </div>
@@ -251,10 +208,19 @@
     </div>
 
     <div class="col-sm-6 col-lg-4 " style="padding-right: 0 !important;display: flex;">
-      <mat-card class="cardWithShadow flex-fill " style="min-height: 199.6px;">
+      <mat-card class="cardWithShadow flex-fill " style="min-height: 199.6px; display: flex; flex-direction: column; justify-content: space-between;">
+        <mat-card-title style="padding-left: 24px;padding-top: 24px;">Registered Client Status</mat-card-title>
         <mat-card-content class="p-24 " >
-          <mat-card-title>Registered Client Status</mat-card-title>
-          <p> Registered Clients: {{registationStatus.registered}}</p>
+          <div class="no-data-available">
+            <div>
+
+              <p style="font-weight: bold;display: flex;
+              justify-content: center;">{{registationStatus.registered}}</p>
+  
+              
+              <p> Registered Clients </p>
+            </div>
+          </div>
         </mat-card-content>
         <app-spinner [showSpinner]="isSpinnerVisible['dashRegClientStatus']">
         </app-spinner>
