--- a/src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.scss
+++ b/src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.scss
@@ -37,3 +37,11 @@
 .apexcharts-legend-text{
     font-size:14px !important;
 }
+
+.no-data-available {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%; /* Adjust as needed */
+  }
+  
