--- a/src/app/pages/dashboards/dashboard1/alert-content/alert-content.component.html
+++ b/src/app/pages/dashboards/dashboard1/alert-content/alert-content.component.html
@@ -2,7 +2,7 @@
 
 <div style=" margin: 2rem;">
 
-    <h1 style="display: flex; justify-content: center;">Alert Details</h1>
+    <h1 style="display: flex; justify-content: center;">Unique Alerts</h1>
 
     <!-- <div *ngIf="showTable"> -->
 
