--- a/src/app/pages/dashboards/dashboard1/deleted-client-pop-up/deleted-client-pop-up.component.html
+++ b/src/app/pages/dashboards/dashboard1/deleted-client-pop-up/deleted-client-pop-up.component.html
@@ -1,6 +1,6 @@
 <div style=" margin: 2rem;">
 
-    <h1 style="display: flex; justify-content: center;">Deleted Client Details</h1>
+    <h1 style="display: flex; justify-content: center;">Deleted Clients</h1>
 
     <!-- <div *ngIf="showTable"> -->
 
