--- a/src/app/pages/apps/log-viewer/log-viewer.component.html
+++ b/src/app/pages/apps/log-viewer/log-viewer.component.html
@@ -2,7 +2,7 @@
   <mat-card-content >
     <form [formGroup]="secondFormGroup">
       <div class="row ">
-        <div class="col-lg-3"> 
+        <div class="col-lg-2"> 
           <div style="display: flex;">
 
             <mat-label class="mat-subtitle-2 f-w-600 m-b-16 d-block">Unit Name</mat-label>
@@ -11,14 +11,30 @@
           <mat-form-field appearance="outline" class="w-100" color="primary"> 
             <mat-select placeholder="Select" formControlName="unitname" multiple (selectionChange)="onUnitSelected($event.value)" 
                         style="padding-top: 1px; padding-bottom: 1px;">
+                        <mat-option>
+                          <ngx-mat-select-search [formControl]="unitnameMultiFilterCtrl" placeholder="Search Unit Names"></ngx-mat-select-search>
+                        </mat-option>
+                        
               <mat-option *ngFor="let item of unitName" [value]="item.unit_id">
                 {{ item.unit_name }}
               </mat-option>
             </mat-select>
           </mat-form-field>
         </div> 
+
+
+        <div class="col-lg-2" style="margin-top: 35px; margin-bottom: 20px;">
+          <div class="">
+            <mat-checkbox class="example-margin"
+              [disabled]="!(secondFormGroup.get('unitname')?.value) || secondFormGroup.get('unitname')?.value === ''"  [checked]="use_subclients"
+              (change)="onCheckboxChange($event)">
+              Include Sub Clients
+            </mat-checkbox>
+          </div>
+        </div>
         
-        <div class="col-lg-3">
+        
+        <div class="col-lg-2">
           <div style="display: flex;">
 
             <mat-label class="mat-subtitle-2 f-w-600 m-b-16 d-block">Clients</mat-label>
@@ -36,9 +52,7 @@
           </mat-form-field>
         </div>
 
-        
-
-        <div class="col-lg-3">
+        <div class="col-lg-2">
           <div style="display: flex;">
             <mat-label class="mat-subtitle-2 f-w-600 m-b-16 d-block">Log type</mat-label>
             <span style="font-size: 0.7rem; margin-left: 10px; color: gray;">&nbsp; </span>
@@ -76,17 +90,17 @@
 
         <div class="col-lg-3">
           <mat-label class="mat-subtitle-2 f-w-600 m-b-16 d-block">Select Date Range</mat-label>
-          <mat-form-field appearance="fill" class="w-100">
+          <mat-form-field appearance="outline" class="w-100">
             <mat-date-range-input [rangePicker]="picker">
-              <input matStartDate #start placeholder="Start date" formControlName="startDate">
+              <input matStartDate #start placeholder="Start date" formControlName="startDate" >
               <input matEndDate #end placeholder="End date" formControlName="endDate" >
             </mat-date-range-input>
-            <mat-hint style="display: block !important">MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+            <!-- <mat-hint style="display: block !important">MM/DD/YYYY – MM/DD/YYYY</mat-hint> -->
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-date-range-picker #picker>
               <mat-date-range-picker-actions>
                 <button mat-button matDateRangePickerCancel>Cancel</button>
-                <button mat-raised-button color="primary"  matDateRangePickerApply>Apply</button>
+                <button mat-raised-button color="primary" (click)="handleApplyButtonClick()" matDateRangePickerApply>Apply</button>
               </mat-date-range-picker-actions>
             </mat-date-range-picker>
           </mat-form-field>
@@ -95,16 +109,16 @@
           </mat-error>
         </div>
 
-               
-
-        
-
-
+        <div class="col-lg-1" style="margin-top: 32px !important;" >
+          <button mat-raised-button color="accent" style="padding: 25px 20px;" (click)="performSearch()">
+            Search
+          </button>
+        </div>
       </div>
 
       <div class="row ">
 
-        <div class="col-lg-3">
+        <!-- <div class="col-lg-3">
           <div class="">
             <mat-checkbox class="example-margin"
               [disabled]="!(secondFormGroup.get('unitname')?.value) || secondFormGroup.get('unitname')?.value === ''"  [checked]="use_subclients"
@@ -112,11 +126,11 @@
               Include Sub Clients
             </mat-checkbox>
           </div>
-        </div>
+        </div> -->
 
         
 
-        <div class="col-lg-6">
+        <div class="col-lg-9">
           <!-- <button mat-raised-button class="rounded m-b-2 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 5px;" [class.border-red]="formNo === 1">
             
             <span class="text-primary" (click)="logstatus(1, 'summary')">Logs Summary</span>
@@ -124,17 +138,17 @@
           
           <!-- <button mat-flat-button color="warn" class="m-l-8" type="reset">Reset</button> -->
 
+         
+
           <!-- <button mat-raised-button color="primary" (click)="logstatus(1, 'summary')" style="padding: 1.3rem 1rem; margin: 0 5px;" [class.border-red]="formNo === 1">
             Log Summary
-          </button> -->
-
-         
+          </button>
 
           <button mat-raised-button color="accent" (click)="logstatus(2, 'view')" style="padding: 1.3rem 1rem; margin: 10px 5px;" [class.border-red]="formNo === 2">
             View Logs
           </button>
 
-          
+         
 
           <button mat-raised-button *ngIf="next_ts" style="padding: 1.3rem 1rem; margin: 0 5px; background-color: green; color: white;" (click)="logstatus(2, 'next')" >
             Load next batch logs
@@ -146,19 +160,25 @@
 
           <button mat-raised-button color="warn" style="padding: 1.3rem 1rem; margin: 0 5px;" (click)="resetForm()">
             Reset
-          </button>
+          </button> -->
 
-
+          <!-- <button mat-raised-button 
+        *ngIf="next_ts !== undefined" 
+        [disabled]="!next_ts"
+        style="padding: 1.3rem 1rem; margin: 0 5px; background-color: green; color: white;" 
+        (click)="logstatus(2, 'next')">
+          Load Next Batch logs
+        </button> -->
+<!-- 
+        <button mat-raised-button 
+        *ngIf="prev_ts !== undefined" 
+        [disabled]="!prev_ts"
+        style="padding: 1rem 1rem; margin: 0 1px; background-color: green; color: white;" 
+        (click)="logstatus(2, 'next')">
+          Load Prev Batch logs
+        </button> -->
 
         </div>
-
-        <!-- <div class="col-lg-2">
-         
-        </div>
-
-        <div class="col-lg-2">
-         
-        </div> -->
 
       </div>
 
@@ -169,168 +189,125 @@
   </mat-card-content>
 </mat-card>
 
+<mat-card class="cardWithShadow theme-card" *ngIf="tabshow">
+  <!-- <mat-card-content class="b-t-1"> -->
+	<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start" animationDuration="0ms" [(selectedIndex)]="selectedTabIndex" (selectedTabChange)="onTabChange($event)">
+  	<mat-tab label="Log Summary">
+    	<div class="mat-body-1 p-16 rounded m-t-12" [ngClass]="{ 'border-red': selectedTabIndex === 1 }">
+      	<ng-container *ngIf="l_loading; else dataContent12">
+        	<div class="spinner-container">
+          	<mat-spinner color="primary"></mat-spinner>
+        	</div>
+      	</ng-container>
+ 	 
+      	<ng-template #dataContent12>
+        	<div class="row">  
+          	<div class="col-sm-6 col-lg-3" *ngFor="let logs of loglist">
+ 	 
+            	<mat-card class="cardWithShadow text-center"  style="border-color: lightgrey; background-color: white;  border-width: 0.5px; ">
+              	<!-- Title Section -->
+   	 
+              	<div class="row" style="padding-top: 10px;">
+                	<div class="col-3" style="padding-top: 30px;">
+                  	<mat-icon  color="accent" style="font-size: 50px !important; height: 55px; width: 50px;">{{logs.icon}}</mat-icon>
+                	</div>
+               	 
+                	<div class="col" style="margin-bottom: 10px;">
+                  	<div class="row">
+                    	<div class="col">
+                      	<mat-card-title class="f-s-16 accent" color="accent" >{{ logs.logtype }}</mat-card-title>
+                     	 
+                      	<!-- <hr style="margin-left: 2px;"> -->
+                    	</div>          	 
+                   	 
+                  	</div>
+                  	<div class="row">
+                    	<div class="col">
+                      	<mat-card-title class="f-s-16">Logs</mat-card-title>
+                    	</div>
+                    	<div class="col">
+                      	<mat-card-title class="f-s-16">Clients</mat-card-title>
+                    	</div>           	 
+                  	</div>
+                  	<div class="row" >
+                    	<div class="col">
+                      	<mat-card-title class="f-s-16" d>{{ logs.logs }}</mat-card-title>
+                    	</div>
+                    	<div class="col">
+                      	<mat-card-title class="f-s-16">{{ logs.clients }}</mat-card-title>
+                    	</div>
+                  	</div>
+                 	 
+                	</div>
+   	 
+              	</div>
+            	</mat-card>
+           	 
+          	</div>   
+      	</div>
+      	</ng-template>
+    	</div>
+  	</mat-tab>
+  	<mat-tab label="View Logs"
+    	>
+      <div class=" mat-body-1 p-16 rounded m-t-2" [ngClass]="{ 'border-red': selectedTabIndex === 2 }">
+        <div style="text-align: center; margin-bottom: 20px;" >
+         
+          <button mat-raised-button color="primary" *ngIf="prev_ts" style="padding: 1.3rem 1rem; margin: 0 5px; color: white;" (click)="logstatus(2, 'prev')" >
+            Load previous batch logs
+          </button>
+           <button mat-raised-button *ngIf="next_ts" color="accent" style="padding: 1.3rem 1rem; margin: 0 5px; color: white;" (click)="logstatus(2, 'next')" >
+            Load next batch logs
+          </button>
 
-
-<mat-card-content class="p-4 bg-white" *ngIf="formNo ==1 || formNo ==2 ">
-  <div *ngIf="formNo ==1"> 
-    
-    <div class="row">
-
-      <div class="col-sm-6 col-lg-3" *ngFor="let logs of courseList">
-
-        <mat-card class="cardWithShadow text-center"  style="border-color: lightgrey; background-color: white;  border-width: 0.5px; ">
-          <!-- Title Section -->
-
-          <div class="row" style="padding-top: 10px;">
-            <div class="col-3" style="padding-top: 30px;">
-              <mat-icon  color="accent" style="font-size: 50px !important; height: 55px; width: 50px;">{{logs.icon}}</mat-icon>
-            </div>
-            
-            <div class="col">
-              <div class="row">
-                <div class="col">
-                  <mat-card-title class="f-s-16">{{ logs.logtype }}</mat-card-title>
-
-                  <!-- <hr style="margin-left: 2px;"> -->
-                </div>
-
-                <!-- <div class="vertical-line"></div> -->
-                
-                
-              </div>
-              <div class="row">
-                <div class="col">
-                  <mat-card-title class="f-s-16">Logs</mat-card-title>
-                </div>
-                <div class="col">
-                  <mat-card-title class="f-s-16">Clients</mat-card-title>
-                </div>                
-              </div>
-              <div class="row">
-                <div class="col">
-                  <mat-card-title class="f-s-16">12312</mat-card-title>
-                </div>
-                <div class="col">
-                  <mat-card-title class="f-s-16">4531</mat-card-title>
-                </div>
-              </div>
-              
-            </div>
-
-          </div>
+        </div>
         
-          <!-- Content Section -->
-          <!-- <div class="row">
-            <div class="col-9">
-              <div class="row">
-                <div class="col">
-                  <p><b>Logs</b> </p>
-                </div>
-                <div class="col">
-                  <p><b>Clients</b> </p>
-                </div>
-              </div>
-            </div>
-          </div> -->
-        </mat-card>
-        
-        <!-- <mat-card class="cardWithShadow text-center" style="border-color: black; background-color: white;">
-          <div class="p-8 b-t-1">
-            <mat-card-title class="f-s-16">{{ logs.logtype }}</mat-card-title>
-          </div>
-
-          <div class="row">
-            <div class="col">
-              <mat-icon>announcement</mat-icon>
-            </div>
-            <div class="row">
-              <div class="col">
-                <p><b>Logs</b> </p>
-              </div>
-              <div class="col">
-                <p><b>Clients</b> </p>
-              </div>
-            </div>
-            
-        </div> -->
-
-          <!-- <mat-card-content class="p-20">
-            <h5 class="f-s-16 f-w-400 mat-subtitle-1 m-b-10">ghujjfd</h5>
-          
-          </mat-card-content> -->
-
-
-        <!-- </mat-card> -->
-      </div>
-    </div>
-
-  </div>
-  <div *ngIf="formNo ==2"> 
-    <!-- <p>View logs page</p> -->
-
-
-    <!-- <div class="col-lg-6">
-      <mat-label class="mat-subtitle-2 f-w-600 m-b-16 d-block">Log type</mat-label>
-
-      <mat-form-field appearance="outline" class="w-100" color="primary">
-        <mat-select placeholder="Select">
-          <mat-option *ngFor="let logtype of uniqueLogTypes" [value]="logtype">
-            {{ logtype }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div> -->
-    <div style=" margin: 1rem;">
-
-      <!-- <h1 style="display: flex; justify-content: center;">Log Details</h1> -->
-  
-      <!-- <div *ngIf="showTable"> -->
-
-        <ng-container *ngIf="loading; else dataContent">
+      	<ng-container *ngIf="loading; else dataContent">
           <div class="spinner-container">
             <mat-spinner color="primary"></mat-spinner>
           </div>
         </ng-container>
-
+        
         <ng-template #dataContent>
-          <div class="colorTable" *ngIf="logdata &&  logdata.length > 0; else nodata">
-  
+          
+          <div *ngIf="logdata &&  logdata.length > 0; else nodata">
+   
             <table datatable [dtOptions]="dtOptions" class="row-border hover">
                 <thead >
                     <tr>
-                        <th>Sr No</th>
-                        <th>Name</th>
-    
-                        <th>Mac ID</th>
+                        <th style="white-space: nowrap;">Sr No</th>
+                        <th style="white-space: nowrap;">Name</th>
+      
+                        <th style="white-space: nowrap;">Mac ID</th>
                         <!-- <th>Client IP</th> -->
-                        <th>Unit Name</th>
-                        <th>Log Type</th>
-                        <th> Date </th>
+                        <th style="white-space: nowrap;">Unit Name</th>
+                        <th style="white-space: nowrap;">Log Type</th>
+                        <th style="white-space: nowrap;"> Date </th>
                         <th> Message</th>
                         
-  
+   
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let log of logdata; let i = index">
                         <td>{{ i + 1 }}</td>
-                        <td>
+                        <td style="white-space: nowrap;">
                             {{log.client_name}}
                         </td>
-    
-                        <td>
+      
+                        <td style="white-space: nowrap;">
                             {{log.client_macid}}
                         </td>
                         <!-- <td>
                             {{log.client_ip}}
                         </td> -->
-                        <td>
+                        <td style="white-space: nowrap;">
                           {{log.unit_name}}
                         </td>
-                        <td>
+                        <td style="white-space: nowrap;">
                           {{log.log_type}}
                         </td>
-                        <td>
+                        <td style="white-space: nowrap;">
                           {{log.datereported}}
                         </td>
                         <td>
@@ -341,16 +318,15 @@
                 </tbody>
             </table>
         </div>
-
+  
         <ng-template #nodata>
             <h1 style="display: flex; justify-content: center;">No logs available</h1>
-        </ng-template>
-     
-          
+        </ng-template>    
         </ng-template>
   
-      <!-- </div> -->
-  </div>
+    	</div></mat-tab
+  	>
+	</mat-tab-group>
+  <!-- </mat-card-content> -->
+</mat-card>
 
-  </div>   
-</mat-card-content>
