--- a/src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.html
+++ b/src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.html
@@ -1,231 +1,158 @@
-<!-- <div class="col-lg-6">
-  <mat-label class="mat-subtitle-2 f-w-600 m-b-16 d-block">Select Date Range</mat-label>
-  <mat-form-field appearance="fill" class="w-100" >
-    <mat-label>MM/DD/YYYY-MM/DD/YYYY</mat-label>
-    
-    <mat-date-range-input [rangePicker]="picker" [formGroup]="dateRangeForm">
-      <input matStartDate #start placeholder="Start date" formControlName="startDate">
-      <input matEndDate #end placeholder="End date" formControlName="endDate">
-    </mat-date-range-input>
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-date-range-picker #picker>
-      <mat-date-range-picker-actions>
-        <button mat-button matDateRangePickerCancel>Cancel</button>
-        <button
-          mat-raised-button
-          color="primary"
-          matDateRangePickerApply
-          (click)="onDateRangeApply()"
-        >
-          Apply
-        </button>
-      </mat-date-range-picker-actions>
-    </mat-date-range-picker>
-  </mat-form-field>
- 
-
-</div> -->
 
 
 <div class="row">
 
-  <div class="col-lg-6">
-    <mat-card class="b-1 shadow-none">
-      <mat-card-content class="b-t-1 p-t-16">
-        <mat-label class="mat-subtitle-2 f-w-600 m-b-16 d-block">Select Date Range</mat-label>
-        <div style="display: flex">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Enter a date range</mat-label>
-            <mat-date-range-input [rangePicker]="custompicker" [formGroup]="dateRangeForm">
-              <input matStartDate placeholder="Start date" formControlName="startDate" />
-              <input matEndDate placeholder="End date" formControlName="endDate" />
-            </mat-date-range-input>
-            <mat-hint style="display: block !important">MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="custompicker"></mat-datepicker-toggle>
-            <mat-date-range-picker #custompicker></mat-date-range-picker>
-          </mat-form-field>
-          <button mat-flat-button color="primary" (click)="onDateRangeApply()" style="margin-left: 16px; margin-top: auto; margin-bottom: auto; "
-            [disabled]="!dateRangeForm.valid ">Submit</button>
-        </div>
-        <div style="display: flex;">
+  <!-- <div class="col-sm-6 col-lg-4">
 
-          <mat-error *ngIf="dateRangeForm.get('startDate')?.hasError('required')" style="margin-right: 16px;">
-            Start Date Is Required
-          </mat-error>
-          <mat-error *ngIf="dateRangeForm.get('endDate')?.hasError('required')">
-            End Date Is Required
-          </mat-error>
-        </div>
-      </mat-card-content>
-    </mat-card>
-    
-  </div>
-
-  <div class="col-lg-6 col-sm-6">
-    <!-- <mat-card class="cardWithShadow  flex-fill">
-      <mat-card-content class="p-24 ">
-    <mat-label class="mat-subtitle-2 f-w-600 m-b-16 d-block">Select Date Range</mat-label>
-    <mat-form-field appearance="fill" class="w-100" >
-      <mat-label>MM/DD/YYYY-MM/DD/YYYY</mat-label>
-      <mat-date-range-input [rangePicker]="picker" [formGroup]="dateRangeForm">
-        <input matStartDate #start placeholder="Start date" formControlName="startDate">
-        <input matEndDate #end placeholder="End date" formControlName="endDate">
-      </mat-date-range-input>
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-date-range-picker #picker>
-        <mat-date-range-picker-actions>
-          <button mat-button matDateRangePickerCancel>Cancel</button>
-          <button
-            mat-raised-button
-            color="primary"
-            matDateRangePickerApply
-            (click)="onDateRangeApply()"
-          >
-            Apply
-          </button>
-        </mat-date-range-picker-actions>
-      </mat-date-range-picker>
-    </mat-form-field>
-      </mat-card-content>
-    </mat-card> -->
-    
-  
-  </div>
-  
-  <!-- <div class="col-sm-6 col-lg-6 " style="padding-right: 0 !important;display: flex;">
-    <mat-card class="cardWithShadow flex-fill ">
-      <mat-card-content class="p-24 ">
-        <mat-card-title>Registered Client Status</mat-card-title>
-        <p> Registered Clients: {{registationStatus.registered}}</p>
-      </mat-card-content>
-      <app-spinner [showSpinner]="isSpinnerVisible['dashRegClientStatus']">
-      </app-spinner>
-    </mat-card>
-  </div> -->
-
- 
-
-
-
-</div>
-  <div class="row">
-
-    <div class="col-sm-6 col-lg-4" >
-
-      <!-- <div> -->
-
-        
-  
-        <div>
-
+    <div>
       
-          <!-- chart  -->
-          <mat-card class="cardWithShadow flex-fill" style="min-height: 199.6px; display: flex; flex-direction: column; justify-content: space-between;">
-            <mat-card-title style="padding-left: 24px;padding-top: 24px;">Date Range Alerts</mat-card-title>
-          
-            <mat-card-content class="p-24" style="flex: 1; display: flex; flex-direction: column; justify-content: center;">
-              <div *ngIf="clamav || integrity || urlV || usbv; else noChartData" id="visitor-chart" class="p-t-12 d-flex flex-column hideToolTip">
-                <apx-chart [series]="ourvisitorChart.series" [chart]="ourvisitorChart.chart" [labels]="ourvisitorChart.labels"
-                  [colors]="ourvisitorChart.colors" [responsive]="ourvisitorChart.responsive"></apx-chart>
-              </div>
-          
-              <ng-template #noChartData>
-                <div class="no-data-available">
-                  <i-tabler name="user" class="icon-20 d-flex larger-icon" style=" color: white; transform: scale(1.3); margin-right: 0.5rem;"></i-tabler>
-                  
-                  <ng-container *tablerIcons="'user'"></ng-container>
-                  
-                  <p>No Data Available For The Chart</p>
-                </div>
-              </ng-template>
-            </mat-card-content>
-          
-            <app-spinner [showSpinner]="isSpinnerVisible['dashDateRangeAlert']"></app-spinner>
-          </mat-card>
-          
-          
+      <mat-card class="cardWithShadow flex-fill"
+        style="min-height: 199.6px; display: flex; flex-direction: column; justify-content: space-between;">
+        <div style="display: flex;justify-content: space-between; align-items: center; width: 100%;padding-top: 24px;">
+
+          <mat-card-title style="margin-left: 24px;">Date Range Alert</mat-card-title>
+
+          <mat-card-title style="padding-left: 24px;display: flex;align-items: center;margin-right: 24px;">
+            <span style="font-weight: normal;">Last</span>
+
+            <form [formGroup]="formGroup" class="hide-hint" style="margin-left: 8px;"> 
+              <mat-form-field appearance="outline" color="primary" style="width: 124px;">
+                <mat-label>Select</mat-label>
+                <mat-select placeholder="Select" formControlName="usertype" required>
+                  <mat-option *ngFor="let item of unitType" [value]="item">
+                    {{ item }} Days
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </form>
+  
+          </mat-card-title>
           
         </div>
 
-      <!-- </div> -->
-      
-
-
-      
-    </div>
-  
-    
-  
-  
-   
-
-    <div class="col-sm-6 col-lg-4 " style=" display: flex; ">
-      <mat-card class="cardWithShadow  flex-fill">
-        <mat-card-content class="p-24 ">
-          <mat-card-title>OTP Status</mat-card-title>
-        
-         
-              <div id="visitor-chart" class="p-t-16 d-flex flex-column">
-               
-  
-                  <mat-card class="b-1 shadow-none" style="margin-bottom: 0">
-                  
-                    <mat-card-content class="b-t-1" >
-                        <div class="row" style=" border-bottom: 1px solid #a3a3a3; padding-bottom: 16px;">
-                            <div class="col-sm-7 col-lg-7">
-                               OTP Generated
-                            </div>
-                            <div class="col-sm-1 col-lg-1" style="display: flex;justify-content: center;">
-                                :
-                            </div>
-                            <div class="col-sm-3 col-lg-3">
-                              {{otpStatus?.otp_generated}}
-                            </div>
-                        </div>
-            
-                        <div class="row" style="margin-top: 16px;padding-bottom: 16px;">
-                            <div class="col-sm-7 col-lg-7">
-                                OTP Used
-                            </div>
-                            <div class="col-sm-1 col-lg-1" style="display: flex;justify-content: center;">
-                                :
-                            </div>
-                            <div class="col-sm-4 col-lg-4">
-                              {{otpStatus?.otp_used}}
-                            </div>
-                        </div>      
-                    </mat-card-content>
-                    <app-spinner [showSpinner]="isSpinnerVisible['dashOtpStatusCard']">
-                    </app-spinner>
-                </mat-card>
-              </div>
-          
+        <div *ngIf="clamav || integrity || urlV || usbv; else noChartData">
+        <mat-card-content class="p-24" style="flex: 1; display: flex; flex-direction: column; justify-content: center;">
+          <div  id="visitor-chart"
+            class="p-t-12 d-flex flex-column hideToolTip">
+            <apx-chart [series]="ourvisitorChart.series" [chart]="ourvisitorChart.chart"
+              [labels]="ourvisitorChart.labels" [colors]="ourvisitorChart.colors"
+              [responsive]="ourvisitorChart.responsive"
+              [legend]="ourvisitorChart.legend"></apx-chart>
+          </div>
         </mat-card-content>
-        <app-spinner [showSpinner]="isSpinnerVisible['card1']">
-        </app-spinner>
-      </mat-card>
-      
-    </div>
 
-    <div class="col-sm-6 col-lg-4 " style="padding-right: 0 !important;display: flex;">
-      <mat-card class="cardWithShadow flex-fill " style="min-height: 199.6px; display: flex; flex-direction: column; justify-content: space-between;">
-        <mat-card-title style="padding-left: 24px;padding-top: 24px;">Registered Client Status</mat-card-title>
-        <mat-card-content class="p-24 " >
-          <div class="no-data-available">
-            <div>
+        <mat-card-content class="p-24" style="padding-top: 0px !important;">
+          <div class="d-flex align-items-center justify-content-center" style="gap: 24px">
+              <div class="d-flex gap-12">
+              <i-tabler name="circle-filled" class="text-accent icon-12 d-flex"></i-tabler>
+              <span class="mat-subtitle-2 text-accent">USB Violation</span>
+            </div>
+            <div class="d-flex gap-12">
+              <i-tabler name="circle-filled" class="text-primary icon-12 d-flex"></i-tabler>
+              <span class="mat-subtitle-2 text-primary">ClamAv</span>
+            </div>
 
-              <p style="font-weight: bold;display: flex;
-              justify-content: center;">{{registationStatus.registered}}</p>
-  
-              
-              <p> Registered Clients </p>
+            <div class="d-flex gap-12">
+              <i-tabler name="circle-filled" class=" icon-12 d-flex"  style="color: #7456f0;"></i-tabler>
+              <span class="mat-subtitle-2 " style="color: #7456f0;">URL Violation</span>
+            </div>
+
+            <div class="d-flex gap-12">
+              <i-tabler name="circle-filled" class="icon-12 d-flex" style="color: #ffb22b"></i-tabler>
+              <span class="mat-subtitle-2 text-gray-100" style="color: #ffb22b">Integrity</span>
             </div>
           </div>
         </mat-card-content>
-        <app-spinner [showSpinner]="isSpinnerVisible['dashRegClientStatus']">
-        </app-spinner>
+      </div>
+
+        <ng-template #noChartData>
+          <div class="no-data-available">
+         
+
+            <p>{{dateRangeChartMessage}}</p>
+          </div>
+        </ng-template>
+
+        <app-spinner [showSpinner]="isSpinnerVisible['dashDateRangeAlert']"></app-spinner>
       </mat-card>
     </div>
+  </div> -->
 
+
+  <!-- bar chart -->
+  <div class="col-sm-6 col-lg-4">
+    <div>
+      <mat-card class="cardWithShadow flex-fill"
+        style="min-height: 199.6px; display: flex; flex-direction: column; justify-content: space-between;">
+        <div style="display: flex;justify-content: space-between; align-items: center; width: 100%;padding-top: 24px;">
+
+          <mat-card-title style="margin-left: 24px;">Date Range Alert</mat-card-title>
+
+          <mat-card-title style="padding-left: 24px;display: flex;align-items: center;margin-right: 24px;">
+            <span style="font-weight: normal;">Last</span>
+
+            <form [formGroup]="formGroup" class="hide-hint" style="margin-left: 8px;"> 
+              <mat-form-field appearance="outline" color="primary" style="width: 124px;">
+                <mat-label>Select</mat-label>
+                <mat-select placeholder="Select" formControlName="usertype" required>
+                  <mat-option *ngFor="let item of unitType" [value]="item">
+                    {{ item }} Days
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </form>
   
+          </mat-card-title>
+          
+        </div>
+
+        <div *ngIf="clamav || integrity || urlV || usbv; else noChartData">
+
+        
+        <mat-card-content class="p-24" style="flex: 1; display: flex; flex-direction: column; justify-content: center;">
+        
+          
+          
+         
+
+
+            <apx-chart
+  [series]="mostvisitChart.series"
+  [chart]="mostvisitChart.chart"
+  [colors]="mostvisitChart.colors"
+  [plotOptions]="mostvisitChart.plotOptions"
+  [xaxis]="mostvisitChart.xaxis"
+  [yaxis]="mostvisitChart.yaxis"
+  [tooltip]="mostvisitChart.tooltip"
+  [grid]="mostvisitChart.grid"
+  [stroke]="mostvisitChart.stroke"
+  [dataLabels]="mostvisitChart.dataLabels"
+  [legend]="mostvisitChart.legend"
+></apx-chart>
+
+
+
+          
+        </mat-card-content>
+
+       
+      </div>
+
+      <ng-template #noChartData>
+        <div class="no-data-available">
+       
+
+          <p>{{dateRangeChartMessage}}</p>
+        </div>
+      </ng-template>
+
+      <app-spinner [showSpinner]="isSpinnerVisible['dashDateRangeAlert']"></app-spinner>
+
+        
+
+      </mat-card>
+    </div>
   </div>
+
+
+</div>
