--- a/src/app/pages/dashboards/dashboard1/dashboard-charts2/dashboard-charts2.component.html
+++ b/src/app/pages/dashboards/dashboard1/dashboard-charts2/dashboard-charts2.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-3 col-sm-6">
-      <mat-card class="cardWithShadow" (click)="patchCard()" style="cursor: pointer;">
+      <mat-card class="cardWithShadow" (click)="patchCard()" style="cursor: pointer;min-height: 114.8px;">
         <mat-card-content class="p-x-24 p-y-16">
           <div class="row justify-content-between">
             <div class="col-6 d-flex align-items-center">
@@ -16,6 +16,7 @@
             <div class="col-5 d-flex align-items-center">
               <div
                 class="d-flex flex-column align-items-center justify-content-end"
+                *ngIf="!isSpinnerVisible['dashPatchCard']"
               >
                 <apx-chart
                   [series]="pie1Chart.series"
@@ -39,7 +40,7 @@
     </div>
 
     <div class="col-lg-3 col-sm-6">
-        <mat-card class="cardWithShadow" (click)="policyCard()" style="cursor: pointer;">
+        <mat-card class="cardWithShadow" (click)="policyCard()" style="cursor: pointer; min-height: 114.8px;">
           <mat-card-content class="p-x-24 p-y-16">
             <div class="row justify-content-between">
               <div class="col-6 d-flex align-items-center">
@@ -55,6 +56,7 @@
               <div class="col-5 d-flex align-items-center">
                 <div
                   class="d-flex flex-column align-items-center justify-content-end"
+                  *ngIf="!isSpinnerVisible['dashPolicyCard']"
                 >
                   <apx-chart
                     [series]="pie2Chart.series"
@@ -80,7 +82,7 @@
 
 
       <div class="col-lg-3 col-sm-6">
-        <mat-card class="cardWithShadow" (click)="clamAvCard()" style="cursor: pointer;">
+        <mat-card class="cardWithShadow" (click)="clamAvCard()" style="cursor: pointer;min-height: 114.8px;">
           <mat-card-content class="p-x-24 p-y-16">
             <div class="row justify-content-between">
               <div class="col-6 d-flex align-items-center">
@@ -96,6 +98,7 @@
               <div class="col-5 d-flex align-items-center">
                 <div
                   class="d-flex flex-column align-items-center justify-content-end"
+                  *ngIf="!isSpinnerVisible['dashClamAVCard']"  
                 >
                   <apx-chart
                     [series]="pie3Chart.series"
@@ -119,7 +122,7 @@
       </div>
 
       <div class="col-lg-3 col-sm-6" style="padding-right: 0 !important;">
-        <mat-card class="cardWithShadow"  (click)="logCard()" style="cursor: pointer;">
+        <mat-card class="cardWithShadow"  (click)="logCard()" style="cursor: pointer;min-height: 114.8px;">
           <mat-card-content class="p-x-24 p-y-16">
             <div class="row justify-content-between">
               <div class="col-6 d-flex align-items-center">
@@ -135,6 +138,7 @@
               <div class="col-5 d-flex align-items-center">
                 <div
                   class="d-flex flex-column align-items-center justify-content-end"
+                  *ngIf="!isSpinnerVisible['dashAlertCard']" 
                 >
                   <apx-chart
                     [series]="pie4Chart.series"
