1. change password updated
	modified:   src/app/layouts/full/vertical/header/change-password/change-password.component.html

--- a/src/app/layouts/full/vertical/header/change-password/change-password.component.html
+++ b/src/app/layouts/full/vertical/header/change-password/change-password.component.html
@@ -8,18 +8,18 @@
             <mat-card-content class="b-t-1">
                 <form class="" [formGroup]="changePasswordForm">
 
-                    <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Old Password</mat-label>
+                    <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Current Password</mat-label>
 
                     <mat-form-field appearance="outline" class="w-100" color="primary">
                         <input matInput type="text" formControlName="oldPassword" required
-                            placeholder="Enter Old Password" />
+                            placeholder="Enter Current Password" />
 
                         <mat-icon matPrefix>
                             <i-tabler name="lock" class="icon-20 d-flex" style="margin: 12px;"></i-tabler>
                         </mat-icon>
 
                         <mat-error *ngIf="changePasswordForm?.get('oldPassword')?.hasError('required')">
-                            Old Password Is Required
+                            Current Password Is Required
                         </mat-error>
 
                     </mat-form-field>
