--- a/src/app/pages/apps/localadmin/localadmin.component.html
+++ b/src/app/pages/apps/localadmin/localadmin.component.html
@@ -12,33 +12,22 @@
           
               <div class="col-lg-6">
                 <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Unit Name</mat-label>
-                <mat-form-field appearance="outline" class="w-100" color="primary">
-                  <mat-select placeholder="Select" formControlName="unitid" required>
+                <app-select-search [errorMessage]="'Parent Unit is Required'" [selectData]="unitNameUpdated" (bankSelected)="onBankSelected($event, 1)"></app-select-search>
+    
 
+
+                <!-- <mat-form-field appearance="outline" class="w-100" color="primary">
+                  <mat-select placeholder="Select" formControlName="unitid" required>
                     <mat-option *ngFor="let item of unitName" [value]="item.unit_id">
                       {{ item.unit_name }}
                     </mat-option>
-
                   </mat-select>
-
-                  <!-- <input #input
-           type="text"
-           placeholder="Select Unit Name"
-           matInput
-           [formControl]="myControl"
-           [matAutocomplete]="auto"
-           (input)="filter()"
-           (focus)="filter()">
-    <mat-autocomplete requireSelection #auto="matAutocomplete" required>
-      <mat-option *ngFor="let item of filteredOptions" [value]="item.unit_name">
-        {{item.unit_name}}
-      </mat-option>
-    </mat-autocomplete> -->
-
                   <mat-error *ngIf="secondFormGroup?.get('unitid')?.hasError('required')">
                     Unit Name Is Required
                   </mat-error>
-                </mat-form-field>
+                </mat-form-field> -->
+
+
               </div>
     
               <div class="col-lg-6">
@@ -50,6 +39,7 @@
                       {{ item.name }}
                     </mat-option>
 
+                    <!-- <app-select-search [errorMessage]="'Unit Name Is Required'" [selectData]="unitNameUpdated" (bankSelected)="onBankSelected($event, 1)"></app-select-search> -->
 
                     <!-- <mat-option value="local_admin">Local Admin</mat-option>
                     <mat-option value="Log Viewer User">Log Viewer User</mat-option>
@@ -181,8 +171,12 @@
               </div>
     
             </div>
+
+            <app-select-search [errorMessage]="'Parent Unit is Required'" [selectData]="unitNameUpdated" (bankSelected)="onBankSelected($event, 1)"></app-select-search>
     
     
+            <app-select-search [errorMessage]="'Unit Type is Required'" [selectData]="unitNameUpdated" (bankSelected)="onBankSelected($event, 2)"></app-select-search>
+
     
               <div class="row m-t-20">
               <!-- <mat-card-actions class="b-t-1"> -->
